# LaneSensev2

./: CMakeLists.txt  SafetyLogging.h  carla.pb.h  configparser.cpp  configparser.h  errormanager.cpp  errormanager.h  logger.cpp  logger.h  main.cpp  projectNotes.txt  qt_grpc_client.cpp  qt_grpc_client.h  safetyLogging.h  sensordatamodel.cpp  sensordatamodel.h
carla_simulator/: carla.grpc.pb.cc  carla.grpc.pb.h  carla.pb.cc  carla.pb.h  carla.proto  carla_data_collector.py  carla_pb2.py  carla_pb2_grpc.py  carla_test.py  grpc_server.py  ipc_main.py  shared_data.py  shared_data_notes.txt
